# algo_design_manual

calgo/ch03/: btree.h  btree_copy.c  linkedlist.c  linklistmain.c
calgo/ch03/binary_tree/: Makefile  btree.c  main_btree  main_btree.c
calgo/ch03/cpp/: main.cpp
calgo/ch03/linked_list/: Makefile  cmd.sh  linked_list.c  main  main.c  main_test.c  make.bak
calgo/ch03/old/: btree.c  btree_main.c  compile.sh  linkedlist.h
calgo/ch04/: sort.c  sort.h  sorting.c
calgo/ch04/old/: compile.sh  heap.c  heap.h  heap_main.c
calgo/ch04/pq/: Makefile  input.txt  main_pq  main_pq.c  pq.c  pq.h
calgo/ch04/sort/: sort.c  (+5 more)
calgo/ch05/: graph.h  stack.c  stack.h
calgo/ch06/: Makefile  main_backtrack  main_backtrack.c  search.c
calgo/debug/: Makebak  Makefile  MakefileTrial  main  main.c  mainbak  queue.c
cppalgo/algo/: Actor.hpp  Number.hpp  Profile.cpp  Profile.hpp  Str.cpp  Str.hpp
cppalgo/ch03/: BST.hpp  BST.test.cpp  CMakeLists.txt  Comparator.hpp  Linked.test.bug.cpp  Linked.test.cpp  Linked_List.hpp  Number.cpp  Number.hpp  Number.test.cpp  build.sh  main.cpp  main_linked_list.cpp  main_test_reverse.cpp  old.cpp  utility.hpp
cppalgo/ch04/: CMakeLists.txt  Heap.hpp  Heap.test.cpp  Str.test.cpp  build.sh  main.cpp  main_heap.cpp
javaalgo/: .project  build.gradle  run.sh  settings.gradle
javaalgo/data/: dgraph01.txt  topograph01.txt  topograph02.txt  ugraph01.txt  ugraph02.txt  wgraph01.txt
mycode/: sqroot.cpp
tsalgo/: cat.ts
tsalgo/chapter3/: ListNode.ts  btree.ts  index.ts  queue.ts  stack.ts
tsalgo/chapter4/: package.json
tsalgo/data/: numbers.txt
(+84 files in other folders)
